// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Max shell > renders the English page-first shell without a databases section in the sidebar 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <bdi>
        Test Shop
      </bdi>
      <span
        aria-hidden="true"
      >
        /
      </span>
      <bdi>
        <strong>
          Home
        </strong>
      </bdi>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          Search data
        </span>
        <kbd>
          Ctrl
           F
        </kbd>
      </button>
      <button
        class="button button--ghost"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-workflow"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="8"
              rx="2"
              width="8"
              x="3"
              y="3"
            />
            <path
              d="M7 11v4a2 2 0 0 0 2 2h4"
            />
            <rect
              height="8"
              rx="2"
              width="8"
              x="13"
              y="13"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          Workflows
        </span>
      </button>
      <button
        class="button button--ghost quick-entry-trigger"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-zap"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.914 4a1.5 1.5 0 00-2.474-1.561l-9 9A1.5 1.5 0 005.5 14h4.002a.5.5 0 01.471.666L8.086 20a1.5 1.5 0 002.475 1.56l9-9A1.5 1.5 0 0018.5 10h-3.997a.5.5 0 01-.472-.667z"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          Quick action
        </span>
      </button>
    </div>
  </header>
  <main
    aria-label="Home"
    class="content"
    data-custom-page="false"
    data-page="home"
    id="main-content"
    tabindex="-1"
  >
    <div
      class="custom-page-view"
    >
      <div
        class="custom-page-header"
      >
        <div
          class="custom-page-header__icon-wrap"
        >
          <button
            aria-label="Change icon or emoji"
            class="custom-page-icon-btn"
            title="Change icon or emoji"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house custom-page-icon-display"
              fill="none"
              height="28"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="custom-page-header__title-row"
        >
          <input
            class="custom-page-title-input"
            placeholder="Shop Overview & Home"
            value="Home"
          />
        </div>
      </div>
      <div
        class="custom-page-content"
      >
        <div
          class="notion-editor-canvas"
        >
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="callout"
            data-type="callout"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-callout-card"
              >
                <span
                  class="notion-callout-icon"
                >
                  💡
                </span>
                <textarea
                  class="notion-callout-input"
                  placeholder="Callout note..."
                  rows="1"
                >
                  Welcome to Max. You can type **/** anywhere to insert headings, notes, bullet lists, or embed live interactive database tables directly into this page.
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="divider"
            data-type="divider"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-divider-wrap"
              >
                <hr
                  class="notion-divider"
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="h2"
            data-type="h2"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <input
                class="notion-heading-input notion-heading-input--h2"
                placeholder="Heading 2..."
                value="Quick Notes & Priorities"
              />
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="bullet"
            data-type="bullet"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-bullet-wrap"
              >
                <span
                  class="notion-bullet-dot"
                />
                <input
                  class="notion-bullet-input"
                  placeholder="List item..."
                  value="Track daily cash reconciliation before closing drawer."
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="bullet"
            data-type="bullet"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-bullet-wrap"
              >
                <span
                  class="notion-bullet-dot"
                />
                <input
                  class="notion-bullet-input"
                  placeholder="List item..."
                  value="Review low stock items and contact suppliers for reorders."
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="divider"
            data-type="divider"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-divider-wrap"
              >
                <hr
                  class="notion-divider"
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="database-view"
            data-scroll-label="Database view"
            data-type="database-view"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="Insert block below"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="Insert text or database"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="Block actions"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="Drag to reorder"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-embedded-db-card"
              >
                <div
                  class="notion-embedded-db-content"
                >
                  <section
                    class="object-workspace"
                  >
                    <div
                      class="object-layout"
                    >
                      <div
                        aria-busy="false"
                        class="record-panel"
                      >
                        <div
                          class="object-export-action"
                        >
                          <button
                            class="button button--secondary"
                            type="button"
                          >
                            <span
                              class="button__label"
                            >
                              Export Excel
                            </span>
                          </button>
                        </div>
                        <div
                          class="notion-view-bar"
                        >
                          <div
                            class="notion-view-bar__tabs"
                          >
                            <div
                              class="notion-view-tab-wrapper"
                            >
                              <button
                                class="notion-view-tab"
                                data-active="true"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-table-properties"
                                  fill="none"
                                  height="14"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                  viewBox="0 0 24 24"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 3v18"
                                  />
                                  <rect
                                    height="18"
                                    rx="2"
                                    width="18"
                                    x="3"
                                    y="3"
                                  />
                                  <path
                                    d="M21 9H3"
                                  />
                                  <path
                                    d="M21 15H3"
                                  />
                                </svg>
                                <span>
                                  Default view
                                </span>
                              </button>
                              <button
                                aria-label="View options"
                                class="notion-view-tab-menu"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-chevron-down"
                                  fill="none"
                                  height="12"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                  viewBox="0 0 24 24"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6 9 6 6 6-6"
                                  />
                                </svg>
                              </button>
                            </div>
                            <button
                              aria-label="Save view"
                              class="notion-view-tab-add"
                              title="Save view"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-plus"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5 12h14"
                                />
                                <path
                                  d="M12 5v14"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="notion-view-bar__actions"
                          >
                            <button
                              aria-expanded="false"
                              class="notion-db-tool-btn"
                              data-active="false"
                              title="Filter"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-funnel"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                                />
                              </svg>
                              <span>
                                Filter
                              </span>
                            </button>
                            <button
                              aria-expanded="false"
                              class="notion-db-tool-btn"
                              data-active="false"
                              title="Sort"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-arrow-up-down"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m21 16-4 4-4-4"
                                />
                                <path
                                  d="M17 20V4"
                                />
                                <path
                                  d="m3 8 4-4 4 4"
                                />
                                <path
                                  d="M7 4v16"
                                />
                              </svg>
                              <span>
                                Sort
                              </span>
                            </button>
                            <button
                              aria-label="Database properties"
                              class="notion-db-tool-btn"
                              title="Properties"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sliders-horizontal"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10 5H3"
                                />
                                <path
                                  d="M12 19H3"
                                />
                                <path
                                  d="M14 3v4"
                                />
                                <path
                                  d="M16 17v4"
                                />
                                <path
                                  d="M21 12h-9"
                                />
                                <path
                                  d="M21 19h-5"
                                />
                                <path
                                  d="M21 5h-7"
                                />
                                <path
                                  d="M8 10v4"
                                />
                                <path
                                  d="M8 12H3"
                                />
                              </svg>
                              <span>
                                Properties
                              </span>
                            </button>
                            <button
                              class="notion-db-tool-btn"
                              title="Templates"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-file-text"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                                />
                                <path
                                  d="M14 2v5a1 1 0 0 0 1 1h5"
                                />
                                <path
                                  d="M10 9H8"
                                />
                                <path
                                  d="M16 13H8"
                                />
                                <path
                                  d="M16 17H8"
                                />
                              </svg>
                              <span>
                                Templates
                              </span>
                            </button>
                            <div
                              class="notion-db-new-split-btn"
                            >
                              <button
                                class="notion-db-new-btn"
                                type="button"
                              >
                                <span>
                                  New
                                </span>
                              </button>
                              <button
                                aria-label="New options"
                                class="notion-db-new-dropdown-btn"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-chevron-down"
                                  fill="none"
                                  height="13"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2.5"
                                  viewBox="0 0 24 24"
                                  width="13"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6 9 6 6 6-6"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="object-empty"
                        >
                          <div
                            class="empty-state__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-plus"
                              fill="none"
                              height="25"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="25"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5 12h14"
                              />
                              <path
                                d="M12 5v14"
                              />
                            </svg>
                          </div>
                          <h2>
                            No items yet
                          </h2>
                          <p>
                            Create the first record or configure properties for the way this shop works.
                          </p>
                          <button
                            class="button button--primary"
                            type="button"
                          >
                            <span
                              class="button__label"
                            >
                              Create item
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="notion-canvas-bottom-click-target"
          >
            <button
              class="notion-add-content-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add text or database
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Max shell > switches the complete shell to Arabic and RTL 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <bdi>
        Test Shop
      </bdi>
      <span
        aria-hidden="true"
      >
        /
      </span>
      <bdi>
        <strong>
          Home
        </strong>
      </bdi>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          ابحث في البيانات
        </span>
        <kbd>
          Ctrl
           F
        </kbd>
      </button>
      <button
        class="button button--ghost"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-workflow"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="8"
              rx="2"
              width="8"
              x="3"
              y="3"
            />
            <path
              d="M7 11v4a2 2 0 0 0 2 2h4"
            />
            <rect
              height="8"
              rx="2"
              width="8"
              x="13"
              y="13"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          سير العمل
        </span>
      </button>
      <button
        class="button button--ghost quick-entry-trigger"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-zap"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.914 4a1.5 1.5 0 00-2.474-1.561l-9 9A1.5 1.5 0 005.5 14h4.002a.5.5 0 01.471.666L8.086 20a1.5 1.5 0 002.475 1.56l9-9A1.5 1.5 0 0018.5 10h-3.997a.5.5 0 01-.472-.667z"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          عملية سريعة
        </span>
      </button>
    </div>
  </header>
  <main
    aria-label="Home"
    class="content"
    data-custom-page="false"
    data-page="home"
    id="main-content"
    tabindex="-1"
  >
    <div
      class="custom-page-view"
    >
      <div
        class="custom-page-header"
      >
        <div
          class="custom-page-header__icon-wrap"
        >
          <button
            aria-label="تغيير الرمز أو الأيقونة"
            class="custom-page-icon-btn"
            title="تغيير الرمز أو الأيقونة"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house custom-page-icon-display"
              fill="none"
              height="28"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="custom-page-header__title-row"
        >
          <input
            class="custom-page-title-input"
            placeholder="نظرة عامة على المتجر"
            value="Home"
          />
        </div>
      </div>
      <div
        class="custom-page-content"
      >
        <div
          class="notion-editor-canvas"
        >
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="callout"
            data-type="callout"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-callout-card"
              >
                <span
                  class="notion-callout-icon"
                >
                  💡
                </span>
                <textarea
                  class="notion-callout-input"
                  placeholder="ملاحظة هامة..."
                  rows="1"
                >
                  Welcome to Max. You can type **/** anywhere to insert headings, notes, bullet lists, or embed live interactive database tables directly into this page.
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="divider"
            data-type="divider"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-divider-wrap"
              >
                <hr
                  class="notion-divider"
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="h2"
            data-type="h2"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <input
                class="notion-heading-input notion-heading-input--h2"
                placeholder="عنوان 2..."
                value="Quick Notes & Priorities"
              />
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="bullet"
            data-type="bullet"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-bullet-wrap"
              >
                <span
                  class="notion-bullet-dot"
                />
                <input
                  class="notion-bullet-input"
                  placeholder="عنصر قائمة..."
                  value="Track daily cash reconciliation before closing drawer."
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="bullet"
            data-type="bullet"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-bullet-wrap"
              >
                <span
                  class="notion-bullet-dot"
                />
                <input
                  class="notion-bullet-input"
                  placeholder="عنصر قائمة..."
                  value="Review low stock items and contact suppliers for reorders."
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="divider"
            data-type="divider"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-divider-wrap"
              >
                <hr
                  class="notion-divider"
                />
              </div>
            </div>
          </div>
          <div
            class="notion-block-row"
            data-drag-over="false"
            data-dragging="false"
            data-scroll-kind="database-view"
            data-scroll-label="عرض قاعدة البيانات"
            data-type="database-view"
          >
            <div
              class="notion-block-gutter"
            >
              <button
                aria-label="إدراج عنصر أسفل"
                class="notion-gutter-btn notion-gutter-btn--add"
                title="إدراج نص أو قاعدة بيانات"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                aria-label="خيارات السطر"
                class="notion-gutter-btn notion-gutter-btn--drag"
                draggable="true"
                title="سحب للترتيب"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
            </div>
            <div
              class="notion-block-body"
            >
              <div
                class="notion-embedded-db-card"
              >
                <div
                  class="notion-embedded-db-content"
                >
                  <section
                    class="object-workspace"
                  >
                    <div
                      class="object-layout"
                    >
                      <div
                        aria-busy="false"
                        class="record-panel"
                      >
                        <div
                          class="object-export-action"
                        >
                          <button
                            class="button button--secondary"
                            type="button"
                          >
                            <span
                              class="button__label"
                            >
                              تصدير Excel
                            </span>
                          </button>
                        </div>
                        <div
                          class="notion-view-bar"
                        >
                          <div
                            class="notion-view-bar__tabs"
                          >
                            <div
                              class="notion-view-tab-wrapper"
                            >
                              <button
                                class="notion-view-tab"
                                data-active="true"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-table-properties"
                                  fill="none"
                                  height="14"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                  viewBox="0 0 24 24"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 3v18"
                                  />
                                  <rect
                                    height="18"
                                    rx="2"
                                    width="18"
                                    x="3"
                                    y="3"
                                  />
                                  <path
                                    d="M21 9H3"
                                  />
                                  <path
                                    d="M21 15H3"
                                  />
                                </svg>
                                <span>
                                  طريقة العرض الافتراضية
                                </span>
                              </button>
                              <button
                                aria-label="خيارات العرض"
                                class="notion-view-tab-menu"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-chevron-down"
                                  fill="none"
                                  height="12"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                  viewBox="0 0 24 24"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6 9 6 6 6-6"
                                  />
                                </svg>
                              </button>
                            </div>
                            <button
                              aria-label="حفظ طريقة العرض"
                              class="notion-view-tab-add"
                              title="حفظ طريقة العرض"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-plus"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5 12h14"
                                />
                                <path
                                  d="M12 5v14"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            class="notion-view-bar__actions"
                          >
                            <button
                              aria-expanded="false"
                              class="notion-db-tool-btn"
                              data-active="false"
                              title="تصفية"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-funnel"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                                />
                              </svg>
                              <span>
                                تصفية
                              </span>
                            </button>
                            <button
                              aria-expanded="false"
                              class="notion-db-tool-btn"
                              data-active="false"
                              title="ترتيب"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-arrow-up-down"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m21 16-4 4-4-4"
                                />
                                <path
                                  d="M17 20V4"
                                />
                                <path
                                  d="m3 8 4-4 4 4"
                                />
                                <path
                                  d="M7 4v16"
                                />
                              </svg>
                              <span>
                                ترتيب
                              </span>
                            </button>
                            <button
                              aria-label="خيارات الخصائص"
                              class="notion-db-tool-btn"
                              title="الخصائص"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sliders-horizontal"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10 5H3"
                                />
                                <path
                                  d="M12 19H3"
                                />
                                <path
                                  d="M14 3v4"
                                />
                                <path
                                  d="M16 17v4"
                                />
                                <path
                                  d="M21 12h-9"
                                />
                                <path
                                  d="M21 19h-5"
                                />
                                <path
                                  d="M21 5h-7"
                                />
                                <path
                                  d="M8 10v4"
                                />
                                <path
                                  d="M8 12H3"
                                />
                              </svg>
                              <span>
                                الخصائص
                              </span>
                            </button>
                            <button
                              class="notion-db-tool-btn"
                              title="القوالب"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-file-text"
                                fill="none"
                                height="14"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                                />
                                <path
                                  d="M14 2v5a1 1 0 0 0 1 1h5"
                                />
                                <path
                                  d="M10 9H8"
                                />
                                <path
                                  d="M16 13H8"
                                />
                                <path
                                  d="M16 17H8"
                                />
                              </svg>
                              <span>
                                القوالب
                              </span>
                            </button>
                            <div
                              class="notion-db-new-split-btn"
                            >
                              <button
                                class="notion-db-new-btn"
                                type="button"
                              >
                                <span>
                                  جديد
                                </span>
                              </button>
                              <button
                                aria-label="New options"
                                class="notion-db-new-dropdown-btn"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="lucide lucide-chevron-down"
                                  fill="none"
                                  height="13"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2.5"
                                  viewBox="0 0 24 24"
                                  width="13"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6 9 6 6 6-6"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="object-empty"
                        >
                          <div
                            class="empty-state__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-plus"
                              fill="none"
                              height="25"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="25"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5 12h14"
                              />
                              <path
                                d="M12 5v14"
                              />
                            </svg>
                          </div>
                          <h2>
                            لا توجد أصناف بعد
                          </h2>
                          <p>
                            أضف أول سجل، أو جهّز الحقول التي تريد ظهورها في قاعدة البيانات.
                          </p>
                          <button
                            class="button button--primary"
                            type="button"
                          >
                            <span
                              class="button__label"
                            >
                              إضافة صنف
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="notion-canvas-bottom-click-target"
          >
            <button
              class="notion-add-content-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              أضف نصًا أو قاعدة بيانات
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
